--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server": "^3.12.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "graphql": "^16.8.0",
     "graphql-tag": "^2.12.6",
     "mongoose": "^7.5.0"
